@@ -12,14 +12,11 @@ import com.example.newsfeed.comment.repository.CommentRepository;
 import com.example.newsfeed.common.exception.CustomExceptionHandler;
 import com.example.newsfeed.common.exception.ErrorCode;
 import com.example.newsfeed.user.entity.User;
+import com.example.newsfeed.user.service.UserService;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,93 +24,70 @@ public class CommentService {
 
     private final CommentRepository commentRepository;
     private final BoardRepository boardRepository;
+    private final UserService userService;
 
     @Transactional
-    public CommentSaveResponseDto save(Long boardId, CommentSaveRequestDto dto, User loginUser) {
+    public CommentSaveResponseDto save(Long boardId, CommentSaveRequestDto dto, Long userId) {
         Board board = boardRepository.findById(boardId)
-                .orElseThrow(()-> new CustomExceptionHandler(ErrorCode.NOT_FOUND_BOARD)
-        );
+                .orElseThrow(() -> new CustomExceptionHandler(ErrorCode.NOT_FOUND_BOARD)
+                );
 
-        Comment comment = new Comment(dto.getContent(), board, loginUser);
+        User findUser = userService.findById(userId);
+
+        Comment comment = new Comment(dto.getContent(), board, findUser);
         Comment savedComment = commentRepository.save(comment);
-
-        return new CommentSaveResponseDto(savedComment.getId(),
-                                          savedComment.getUser().getId(),
-                                          savedComment.getBoard().getId(),
-                                          savedComment.getContent(),
-                                          savedComment.getCreatedAt(),
-                                          savedComment.getCreatedAt()
-        );
+        return CommentSaveResponseDto.of(savedComment);
     }
 
     @Transactional(readOnly = true)
     public CommentResponseDto findOne(Long boardId, Long id) {
         Board board = boardRepository.findById(boardId)
-                .orElseThrow(()-> new CustomExceptionHandler(ErrorCode.NOT_FOUND_BOARD)
-        );
+                .orElseThrow(() -> new CustomExceptionHandler(ErrorCode.NOT_FOUND_BOARD)
+                );
 
-        Comment comment = commentRepository.findByIdAndBoardId(board.getId(), id);
-
-        return new CommentResponseDto(comment.getId(),
-                                      comment.getUser().getId(),
-                                      comment.getBoard().getId(),
-                                      comment.getContent(),
-                                      comment.getCreatedAt(),
-                                      comment.getCreatedAt()
-        );
-
+        Comment comment = commentRepository.findByIdAndBoardId(id, board.getId());
+        return CommentResponseDto.of(comment);
     }
 
     @Transactional(readOnly = true)
     public List<CommentResponseDto> findAll(Long boardId) {
         Board board = boardRepository.findById(boardId)
-                .orElseThrow(()-> new CustomExceptionHandler(ErrorCode.NOT_FOUND_BOARD)
-        );
+                .orElseThrow(() -> new CustomExceptionHandler(ErrorCode.NOT_FOUND_BOARD)
+                );
 
         List<Comment> comments = commentRepository.findAllByBoardId(board.getId());
-        return comments.stream()
-                .map(comment -> new CommentResponseDto(comment.getId(),
-                                               comment.getUser().getId(),
-                                               comment.getBoard().getId(),
-                                               comment.getContent(),
-                                               comment.getCreatedAt(),
-                                               comment.getCreatedAt())
-                )
-                .collect(Collectors.toList());
+        return comments.stream().map(CommentResponseDto::of).toList();
     }
 
     @Transactional
-    public CommentUpdateResponseDto update(Long id, CommentUpdateRequestDto dto ,User loginUser) {
+    public CommentUpdateResponseDto update(Long id, CommentUpdateRequestDto dto, Long userId) {
         Comment comment = commentRepository.findById(id).orElseThrow(
                 () -> new CustomExceptionHandler(ErrorCode.NOT_FOUND_COMMENT)
         );
 
-        if (!comment.getUser().equals(loginUser)) {
+        User findUser = userService.findById(userId);
+
+        if (!comment.getUser().equals(findUser)) {
             throw new CustomExceptionHandler(ErrorCode.INVALID_USER_UPDATE_COMMENT);
         }
 
-        comment.updateContent(dto.getContent());
-
-        return new CommentUpdateResponseDto(comment.getId(),
-                                            comment.getUser().getId(),
-                                            comment.getBoard().getId(),
-                                            comment.getContent(),
-                                            comment.getCreatedAt(),
-                                            comment.getCreatedAt()
-        );
+        comment.update(dto.getContent());
+        return CommentUpdateResponseDto.of(comment);
     }
 
     @Transactional
-    public void delete(Long id, User loginUser) {
+    public void delete(Long id, Long userId) {
         Comment comment = commentRepository.findById(id).orElseThrow(
                 () -> new CustomExceptionHandler(ErrorCode.NOT_FOUND_COMMENT)
         );
 
-        if (!comment.getUser().equals(loginUser)) {
+        User findUser = userService.findById(userId);
+
+        if (!comment.getUser().equals(findUser)) {
             throw new CustomExceptionHandler(ErrorCode.INVALID_USER_DELETE_COMMENT);
         }
 
-        commentRepository.deleteById(comment.getId());
+        commentRepository.delete(comment);
     }
 
 }
